--- a/NeproFinishedGoodsAngular5/appsettings.json
+++ b/NeproFinishedGoodsAngular5/appsettings.json
@@ -1,8 +1,17 @@
 {
+  "ConnectionStrings": {
+    "FRDInventoryContext": "Server=10.10.10.32;Database=FRDInventory;User ID=sa;Password=iace@123;"
+  },
+
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
   },
+
+
   "AllowedHosts": "*"
+
+
 }
