--- a/NeproFinishedGoodsAngular5/appsettings.json
+++ b/NeproFinishedGoodsAngular5/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FRDInventoryContext": "Server=10.10.10.32;Database=FRDInventory;User ID=sa;Password=iace@123;"
+    "FRDInventoryContext": "Server=10.10.10.53;Database=FRDInventory;User ID=sa;Password=frd@amy210;"
   },
 
   "Logging": {
