--- a/NeproFinishedGoodsAngular5/FRDInventory.csproj
+++ b/NeproFinishedGoodsAngular5/FRDInventory.csproj
@@ -38,7 +38,7 @@
 
   <ItemGroup>
     <Reference Include="Encryption">
-      <HintPath>..\..\..\DLL\Encryption.dll</HintPath>
+      <HintPath>..\..\..\VSS\SatyendarYadav\DLL\Encryption.dll</HintPath>
     </Reference>
   </ItemGroup>
 
