--- a/NeproFinishedGoodsAngular5/FRDInventory.csproj
+++ b/NeproFinishedGoodsAngular5/FRDInventory.csproj
@@ -39,7 +39,7 @@
 
   <ItemGroup>
     <Reference Include="Encryption">
-      <HintPath>..\..\..\VSS\SatyendarYadav\DLL\Encryption.dll</HintPath>
+      <HintPath>bin\Debug\netcoreapp2.1\Encryption.dll</HintPath>
     </Reference>
   </ItemGroup>
 
