changes in  css

--- a/NeproFinishedGoodsAngular5/FRDInventory.csproj
+++ b/NeproFinishedGoodsAngular5/FRDInventory.csproj
@@ -39,9 +39,7 @@
 
   <ItemGroup>
     <Reference Include="Encryption">
-
-      <HintPath>bin\Debug\netcoreapp2.1\Encryption.dll</HintPath>
-
+      <HintPath>..\..\..\DLL\Encryption.dll</HintPath>
     </Reference>
   </ItemGroup>
 
